[package]
name = "streams-examples"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-streams = { git = "https://github.com/iotaledger/streams", branch = "v1.1.0" }
iota-crypto = { git = "https://github.com/iotaledger/crypto.rs", features = ["random"], branch = "dev" }
anyhow = "1.0.40"
tokio = {version = "1.5"}
rand = "0.7.3"
